--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.0.1",
+    "@radix-ui/react-popover": "1.0.3",
+    "@radix-ui/react-slot": "^1.0.1",
+    "flatpickr": "^4.6.13",
+    "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-flatpickr": "^3.10.13"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-flatpickr": "^3.8.8",
     "@vitejs/plugin-react": "^3.1.0",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3",
